made most of navigationBar styles and  added toggles for nav and search

--- a/src/Components/ReusableComponents/NavigationBar/NavigationStyles/header.scss
+++ b/src/Components/ReusableComponents/NavigationBar/NavigationStyles/header.scss
@@ -349,7 +349,7 @@
                         }
                 }
 
-                .contend-width{
+                .content-width{
                     width: 90%;
 
                     .input-container button{
