--- a/src/Components/ReusableComponents/NavigationBar/NavigationStyles/headerMediaMedium.scss
+++ b/src/Components/ReusableComponents/NavigationBar/NavigationStyles/headerMediaMedium.scss
@@ -2,85 +2,78 @@
 
 
 @media screen and (min-width: 550px) {
-     .container {
+
+  .container {
     width: 90%;
     margin: 0 auto;
     padding: 0;
   }
-    .navigation{
-        >.container {
-         padding: $base-spacing 0;
-          header {
-            @include flex(unset, unset, unset, unset);
-            padding: 0;
-            gap: $m-spacing;
+
+  .navigation{
+    >.container {
+      padding: $base-spacing 0;
+      header {
+        @include flex(unset, unset, unset, unset);
+        padding: 0;
+        gap: $m-spacing;
+
     
-        
-          .cart-button {
-            order: 2;
-          }
-          
-          .user-account{
-            order: 1;
-            display: block;
-          }
-          
-    
-          .search-container {
-            margin: 0;
-            margin-left: auto;
-    
-            .form-content{
-    
-              .input-container{
-              
-                .close-search{
-                  right: 50px;
-                  width: 40px;
-                    svg{
-                      width: 20px;
-                    }
-                }
-              }
-            }
-    
-            .content-width{
-              // width: 90%;
-              padding: 1.5rem 0;
-            }
-    
-            .top{
-              top: 0;
-            }
-          }
-    
-           .nav-toggle{
-              top: 5.15rem;
-    
-              .special-nav{
-                padding: 6rem 5% 4rem 5%;
-                flex-direction: row;
-                margin: 0 auto;
-                gap: 1rem;
-                li{
-                  flex-grow: 1;
-                }
-    
-                .user-element{
-                  display: none;
-                }
-              }
-            }
-          }
+        .cart-button {
+          order: 2;
         }
-    
-        .cart-container{
-          .shopping-container{
-            .shopping-cart{
-              margin: 0 0 0 auto;
-      
+        
+        .user-account{
+          order: 1;
+          display: block;
+        }
+        
+  
+        // .search-container {
+        //   margin: 0;
+        //   margin-left: auto;
+  
+        //   .form-content{
+  
+        //     .input-container{
+            
+        //       .close-search{
+        //         right: 50px;
+        //         width: 40px;
+        //           svg{
+        //             width: 20px;
+        //           }
+        //       }
+        //     }
+        //   }
+  
+        //   .content-width{
+        //     // width: 90%;
+        //     padding: 1.5rem 0;
+        //   }
+  
+        //   .top{
+        //     top: 0;
+        //   }
+        // }
+  
+        .nav-toggle{
+            top: 5.15rem;
+  
+            .special-nav{
+              padding: 6rem 5% 4rem 5%;
+              flex-direction: row;
+              margin: 0 auto;
+              gap: 1rem;
+              li{
+                flex-grow: 1;
+              }
+  
+              .user-element{
+                display: none;
+              }
             }
-          }
         }
       }
+    }
+  }
 }
