sign-up page logic almost finished, now it saves users in data base

--- a/src/Pages/SignUp/signUpStyles.scss
+++ b/src/Pages/SignUp/signUpStyles.scss
@@ -6,6 +6,35 @@ body {
   position: relative;
 }
 
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  .success-popup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: $base-border-radius;
+    gap: 2rem;
+    width: 20rem;
+    height: 20rem;
+    background-color: white;
+
+  
+
+    strong {
+      font-size: $l-font;
+      text-transform: capitalize;
+    }
+
+    a{
+      all: unset;
+    }
+  }
+}
+
 .signUp {
   height: 100vh;
   @include flex(unset, center, unset, unset);
