--- a/src/Pages/ProductPage/styles.scss
+++ b/src/Pages/ProductPage/styles.scss
@@ -3,13 +3,16 @@
 .product {
   .container {
     padding: 0 $xs-padding;
+
     p {
       margin-top: $l-spacing;
       margin-bottom: 1.5rem;
+
       a {
         color: $out-of-color-palette-gray;
         cursor: pointer;
-          transition: color 0.3s ease-in-out;
+        transition: color 0.3s ease-in-out;
+
         &:hover{
           color: $orange;
         }
@@ -18,6 +21,7 @@
 
     article {
       padding-bottom: $xl-spacing;
+      
       &:first-of-type {
         .image-container{
           background-color: $gray;
@@ -32,12 +36,9 @@
 
         .product-info{
           max-width: 340px;
+
           p {
             margin: $m-spacing 0;
-            // &:last-of-type {
-            //   font-weight: 700;
-            //   font-size: 1.3rem;
-            // }
           }
 
           strong{
@@ -52,7 +53,6 @@
   
           h2 {
             font-size: $l-font;
-            // width: 90%;
           }
   
           form {
@@ -106,8 +106,8 @@
 
 .you-may-like {
   padding-bottom: $s-section-spacing;
+
   .container {
-    // padding: 0;
     text-align: center;
     
     .recommended-products{
@@ -120,7 +120,11 @@
         transition: box-shadow 0.3s ease-in-out;  
       
         &:hover{
-         box-shadow: 0px 0px 20px 1px rgb(150, 150, 150);
+          box-shadow: 0px 0px 20px 1px rgb(150, 150, 150);
+
+          img{
+            transform: scale(1.1);
+          }
         }
         div {
           display: flex;
@@ -133,12 +137,12 @@
 
           .img-container{
             position: relative;
-            // z-index: 2;
             display: flex;
             align-items: center;
             background-color: $gray;
             border-radius: $base-border-radius;
             padding: 0.625rem 0;
+
             .category-image {
               transition: transform 0.3s ease-in-out;
               width: 150px;
@@ -153,24 +157,19 @@
         
           .button-1{
             display: inline-block;
-            // margin-top: auto;
             align-self: center;
           }
 
-           a {
-          &:not(.big-link){
-            position: relative;
-            z-index: 2;
-            transition: background-color 0.3s ease-in-out;  
-            
-          }
-        }
-          
-          
+          a {
+            &:not(.big-link){
+              position: relative;
+              z-index: 2;
+              transition: background-color 0.3s ease-in-out;  
+            }
+          }  
         }
 
         .big-link{
-          
           position:absolute; 
           width:100%;
           height:100%;
