Add to cart functionality created

--- a/src/Components/ReusableComponents/NavigationBar/CartComponents/cartStyles/cart.scss
+++ b/src/Components/ReusableComponents/NavigationBar/CartComponents/cartStyles/cart.scss
@@ -104,6 +104,10 @@
             .button-1{
                 text-align: center;
             }
+
+            .emptyCart{
+                text-align: center;
+            }
         }    
     }
 }
