--- a/src/SCSS/index.scss
+++ b/src/SCSS/index.scss
@@ -2,3 +2,14 @@ body{
     display: block;
     background-color: unset;
 }
+
+.overlay3 {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 9;
+}
