--- a/src/Pages/Checkout/styles.scss
+++ b/src/Pages/Checkout/styles.scss
@@ -65,6 +65,9 @@
                         }
 
                     }
+
+
+                     
     
                     
                     .payment-method{
@@ -85,11 +88,12 @@
                             }
                         }
                         .radio-button{
+                            position: relative;
                             margin-top: $base-padding;
                             display: flex;
                             align-items: center;
                             flex-wrap: nowrap;
-                            // padding: 0;
+                            padding: 1rem 0;
                             input{
                                 width: 5px;
                                 margin: 0 $s-spacing;
@@ -97,14 +101,23 @@
                                 appearance: none;
                                 -webkit-appearance: none;
                                 border-radius: 50%;
-                                /* The border will be the spacing between the dot and the outer circle */
                                 border: 4px solid #FFF;
-                                /* And by creating a box-shadow with no offset and no blur, we have an outer circle */
                                 box-shadow: 0 0 0 1px $out-of-color-palette-gray;
     
                                 &:checked{
                                     background-color: $orange;
                                 }
+                            }
+
+                            label{
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                cursor: pointer;
+                                padding-left: 2rem;
                             }
                           
                             
