--- a/src/Pages/SignUp/signUpStyles.scss
+++ b/src/Pages/SignUp/signUpStyles.scss
@@ -6,7 +6,7 @@ body {
   position: relative;
 }
 
-.popup {
+.popup1 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +20,7 @@ body {
     gap: 2rem;
     width: 20rem;
     height: 20rem;
-    background-color: white;
+    background-color: $white;
 
   
 
