--- a/src/Components/ReusableComponents/NavigationBar/SearchBar/searchStyles/searchStyles.scss
+++ b/src/Components/ReusableComponents/NavigationBar/SearchBar/searchStyles/searchStyles.scss
@@ -196,6 +196,10 @@
             }
             
         }
+
+        .no-searches{
+            text-align: center;
+        }
         
         
     }
