--- a/src/Pages/SearchPage/SearchPage.scss
+++ b/src/Pages/SearchPage/SearchPage.scss
@@ -673,57 +673,61 @@
 
 
         .pagination{
-            margin-top: $m-spacing;
+           
+            
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            // gap: 1rem;
+            padding: 0;
+            margin: $m-spacing auto 0 auto;
+            width: fit-content;
+            border: 1px solid $black;
+            border-radius: 9px;
 
-            .pagination-list{
-                list-style: none;
-                display: flex;
-                justify-content: center;
-                // gap: 1rem;
-                padding: 0;
-                margin: 0 auto;
+            li{
+               
+                // display: flex;
+                // align-items: center;
+                padding: 0.5rem 0.65rem;
+                font-size: 1.5rem;
+                cursor: pointer;
                 width: fit-content;
-                border: 1px solid $black;
-                border-radius: 9px;
-    
-                .pagination-element{
-                    display: flex;
-                    align-items: center;
-                    padding: 0.5rem 0.65rem;
-                    // padding: 0;
-                    font-size: 1.5rem;
-                     background: none;
-                    cursor: pointer;
-                    // border: 1px solid $black;
-                    transition: background-color 0.3s ease-in-out;
-                    &:hover{
-                        background-color: $black;
-                        color: $white;
-                    }
+
+                transition: background-color 0.3s ease-in-out;
+
+                a{
+                    display: block;
+                    // width:;
+                    height: 100%;
                 }
 
-                .current-page{
+                &:hover{
                     background-color: $black;
-                    color: $white;
+                    
+                    a{
+                        color: $white;
+
+                    }
                 }
 
-                button{
-
-                    svg{
-                        pointer-events: none;
-                    }
-
-                    &:first-of-type{
-                        border-top-left-radius: $base-border-radius;
-                        border-bottom-left-radius: $base-border-radius;
-                    }
-                    &:last-of-type{
-                        border-top-right-radius: $base-border-radius;
-                        border-bottom-right-radius: $base-border-radius;
-                    }
+                &:first-of-type{
+                    border-top-left-radius: $base-border-radius;
+                    border-bottom-left-radius: $base-border-radius;
+                }
+                &:last-of-type{
+                    border-top-right-radius: $base-border-radius;
+                    border-bottom-right-radius: $base-border-radius;
                 }
             }
 
+            .selected{
+                background-color: $black;
+                a{
+                    color: $white;
+
+                }
+            }
         }
     }
 }
