--- a/src/Pages/ProductPage/styles.scss
+++ b/src/Pages/ProductPage/styles.scss
@@ -7,6 +7,7 @@
     p {
       margin-top: $l-spacing;
       margin-bottom: 1.5rem;
+      
 
       a {
         color: $out-of-color-palette-gray;
@@ -17,6 +18,10 @@
           color: $orange;
         }
       }
+    }
+    
+    .discount{
+      color: rgb(99, 129, 250);
     }
 
     article {
